--- a/frontend/index.html
+++ b/frontend/index.html
@@ -134,9 +134,9 @@
               </div>
             </article>
 
-            <article class="city-card" data-city="Rome">
+            <article class="city-card" data-city="Athens">
               <div class="city-header">
-                <h3>Rome</h3>
+                <h3>Athens</h3>
                 <span class="material-symbols-outlined">arrow_outward</span>
               </div>
               <div class="city-body">
