--- a/frontend/detail.html
+++ b/frontend/detail.html
@@ -58,40 +58,6 @@
             </div>
             <p class="location-updated">Last updated: --:--</p>
           </div>
-        <!-- Cabecera ubicación -->
-        <section class="location-header" style="border-bottom: none; padding-bottom: 0;">
-          <div>
-            <div class="location-actions">
-              <button class="btn-outline" id="btnNow">
-                <span class="material-symbols-outlined">calendar_month</span>
-                Now
-              </button>
-              <button class="btn-outline" id="btnForecast">
-                <span class="material-symbols-outlined">calendar_month</span>
-                7-Day Forecast
-              </button>
-            </div>
-
-            <!-- Panel flotante para elegir día/hora -->
-            <div id="forecastPanel" class="forecast-panel" style="display: none;">
-              <h4>Select date & time</h4>
-              <div class="forecast-fields">
-                <label>
-                  Date
-                  <input type="date" id="forecastDate">
-                </label>
-                <label>
-                  Time
-                  <input type="time" id="forecastTime" step="3600">
-                </label>
-              </div>
-              <div class="forecast-actions">
-                <button id="forecastCancel" class="btn-outline">Cancel</button>
-                <button id="forecastApply" class="btn-primary">Apply</button>
-              </div>
-            </div>
-          </div>
-        </section>
 
         <!-- GRID: izquierda (estado) + derecha (mapa) -->
         <div class="grid">
@@ -181,7 +147,7 @@
 
 
     <footer class="footer">
-      <p>© 2023 EuroWeather Inc. Data provided by European Meteo Services.</p>
+      <p>© 2025 EuroWeather. Data provided by OpenMeteo.</p>
     </footer>
   </div>
 </body>
