--- a/frontend/index.html
+++ b/frontend/index.html
@@ -166,7 +166,7 @@
     
 
     <footer class="footer">
-      <p>© 2023 EuroWeather Inc. Data provided by OpenMeteo Services.</p>
+      <p>© 2025 EuroWeather. Data provided by OpenMeteo.</p>
     </footer>
   </div>
 </body>
